[metadata]
name = molformer-nobleai
# TODO: this needs to automatically go back to the prod version before committing
version = 0.1.0
author = MLEngineering @ Noble.AI
author_email = mle@noble.ai
description = forked repo of Molformer library
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_packages_data = True
install_requires = 
    torch==2.1.0
    pytorch-fast-transformers==0.4.0
    transformers==4.6.0
    pytorch-lightning==1.1.5
    datasets==1.6.2
    jupyterlab==3.4.0
    ipywidgets==7.7.0
    bertviz==1.4.0
    numpy==1.22.4
    scipy==1.12.0
    scikit-learn==1.4.0
    rdkit==2023.9.5
    matplotlib==3.8.3

python_requires = >=3.9,<3.11
packages = find:

[options.extras_require]
